--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
             <artifactId>spring-boot</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.testcontainers</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>1.19.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
